--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body {
   font-family: "Inter", sans-serif;
+  text-align: center;
 }
-
+.center {
+  margin: auto auto;
+  width: 60%;
+}
 #banner {
   background-image: linear-gradient(
       360deg,
@@ -20,15 +23,9 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  top: 0;
-  left: 0;
+  display: flex;
 }
-
 .banner-intro {
-  position: absolute;
-  padding: 12% 20%;
-  text-align: center;
   color: #ffffff;
 }
 .banner-intro h1 {
@@ -40,14 +37,16 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   padding: 0px 10%;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
-.btn a {
-  text-decoration: none;
-  color: #ffffff;
+.btn {
   background-color: #ff5959;
   width: 160px;
   height: 56px;
   padding: 16px 12px;
   border-radius: 5px;
+}
+.btn a {
+  text-decoration: none;
+  color: #ffffff;
 }
