--- a/style.css
+++ b/style.css
@@ -51,12 +51,6 @@ p {
   display: flex;
   color: #ffffff;
 }
-.banner-intro {
-  /* color: #ffffff; */
-}
-/* .banner-intro h1 {
-  margin-bottom: 20px;
-} */
 .banner-intro p {
   color: #ffffff;
   margin-bottom: 30px;
@@ -73,9 +67,6 @@ p {
   color: #ffffff;
 }
 
-/* .donate-today{
-  margin-bottom: 130px;
-} */
 .donate-today p {
   margin-bottom: 50px;
 }
@@ -124,6 +115,58 @@ p {
   opacity: 1;
   font-size: 18px;
 }
+
+.plan{
+  width: 100%;
+}
 .donate-plan p{
   margin-bottom: 50px;
+}
+#card-container{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.card{
+  width: 360px;
+  height: 352px;
+  text-align: left;
+  border-radius: 5px;
+  margin-right: 24px;
+}
+.card-1{
+  background-color: rgba(79, 157, 166, 0.1);
+}
+.card-2{
+  background-color: rgba(255, 89, 89, 0.1);
+}
+.card-3{
+  background-color: #FFF4D6;
+}
+.card img{
+  padding-top: 60px;
+  padding-left: 23px;
+}
+.card .content{
+  margin-left: 23px;
+  font-family: "Poppins", sans-serif;
+}
+.content h6{
+  font-size: 24px;
+  font-weight: 600px;
+  color: #121212;
+  padding-top: 31px;
+  margin-bottom: 16px;
+  padding-left: 22px;
+}
+.content p{
+  font-size: 16px;
+  padding-right: 0;
+  padding-left: 22px;
+  
 }
