--- a/style.css
+++ b/style.css
@@ -7,13 +7,18 @@ body {
   text-align: center;
 }
 section{
-  height: auto;
+  /* height: auto; */
   margin-bottom: 130px;
   /* border: 2px solid red; */
 }
 .center {
   margin: auto;
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 h1 {
   font-size: 65px;
@@ -171,6 +176,35 @@ p {
   padding: 25px;
   
 }
+
+.get-update p{
+  margin-bottom: 50px;
+}
+.form{
+  width: 809px;
+  height: 200px;
+  background-color: #FFF4D6;
+  
+}
+.form input{
+  width: 275px;
+  height: 48px;
+  background-color: #D9D9D9;
+  border: none;
+}
+.form button{
+  width: 157px;
+  height: 48px;
+  color: #FFFFFF;
+  background-color: #FF5959;
+  border-radius: 0px 5px 5px 0px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  margin-left: -6px;
+}
+
 footer{
   background: #0B0D17;
 }
