--- a/style.css
+++ b/style.css
@@ -103,7 +103,9 @@ p {
 
 .donation-amount #active-b {
   border: 2px solid #FF5959;
+  border-radius: 5px;
   background-color: #FFEEEE;
+
 }
 
 .donation-amount .amount #amount3 {
@@ -229,18 +231,20 @@ p {
   width: 275px;
   height: 48px;
   background-color: #D9D9D9;
+  padding: 10px;
   border: none;
+  border-radius: 5px 0px 0px 5px;
 }
 .form button{
   width: 157px;
   height: 48px;
   color: #FFFFFF;
   background-color: #FF5959;
+  border: none;
   border-radius: 0px 5px 5px 0px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
-  border: none;
   margin-left: -6px;
 }
 
